2009-02-03  Carlos O'Donell  <carlos@codesourcery.com>

	* configure.in: AC_SUBST pdfdir.
	* configure: Regenerate.

2007-08-13  Nick Clifton  <nickc@redhat.com>

	* standards.texi: Import 22 July 2007 version.
	* fdl.texi: Import version 1.2.
	* make-stds.texi: Import 2006 version.

2007-04-04  Eric Christopher  <echristo@apple.com>

	Move from gcc:
	2007-04-04  Zack Weinberg  <zack@mrtock.ucsd.edu>

	        * texi2pod.pl: Correct handling of @itemize with no argument.

	2007-02-16  Matthias Klose  <doko@debian.org>

	        * texi2pod.pl: Handle @subsubsection, ignore @anchor.

	2007-02-06  Richard Sandiford  <richard@codesourcery.com>

	        * texi2pod.pl: Handle @multitable.

2007-03-27  Brooks Moses  <brooks.moses@codesourcery.com>

	* Makefile.in: Add support for "pdf" and "install-pdf" targets.

2006-12-19  Paolo Bonzini  <bonzini@gnu.org>

	* configure.texi: Fix botched commit.

2006-05-31  Daniel Jacobowitz  <dan@codesourcery.com>

	* texi2pod.pl: Correct handling of absolute @include.

2006-05-02  Daniel Jacobowitz  <dan@codesourcery.com>

	* texi2pod.pl: Handle -I.

2006-04-06  Carlos O'Donell  <carlos@codesourcery.com>

	* Makefile.in: Add install-html target. Add htmldir,
	docdir and datarootdir.
	* configure.texi: Document install-html target.
	* configure.in: AC_SUBST datarootdir, docdir, htmldir.
	* configure: Regenerate.

2006-02-27  Carlos O'Donell  <carlos@codesourcery.com>

	* Makefile.in: TEXI2HTML uses makeinfo. Define
	HTMLFILES. Add html targets.
	* configure.texi: Use ifnottex. Add alternative
	image format specifier as jpg.
	* standards.texi: Use ifnottex.

2005-10-21  Mark Mitchell  <mark@codesourcery.com>

	* texi2pod.pl: Substitue for @value even when part of @include.

2005-10-21  Bob Wilson  <bob.wilson@acm.org>

	* texi2pod.pl: Import latest version from GCC.

2005-05-19  Zack Weinberg  <zack@codesourcery.com>

	* Makefile.in: Have 'all' depend on 'info'.

2003-05-16  Kelley Cook  <kelleycook@wideopenwest.com>
