@@ -1,3 +1,11 @@
+2009-07-30  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* Makefile.in (AUTOCONF, configure_deps): New variables.
+	($(srcdir)/configure, config.status): New rules.
+	(Makefile): Depend on config.status.
+	* configure.in: Accept --enable-maintainer-mode, set and
+	substitute MAINT accordingly.
+
 2009-02-03  Carlos O'Donell  <carlos@codesourcery.com>
 
 	* configure.in: AC_SUBST pdfdir.
